[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "araised"
version = "0.1.1"
description = "Static exception inference for Python — powered by pyright."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pyright",
]

[project.urls]
Homepage = "https://github.com/amirouche/araised.py"

[project.scripts]
araised = "araised:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["test_araised.py"]

[tool.coverage.run]
source = ["araised"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
